# desafio-brasilprev

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
apps/clientes/: models.py  serializers.py  urls.py  views.py
apps/clientes/migrations/: 0001_initial.py  0002_rename_datadenascimento_cliente_data_de_nascimento_and_more.py
apps/clientes/tests/: test_api_cliente.py
apps/extra_contribution/: apps.py
apps/planos/: apps.py  models.py  serializers.py  urls.py  views.py
apps/planos/migrations/: 0001_initial.py  0002_aporte.py  0003_resgate.py  0004_rename_idcliente_aporte_cliente_and_more.py
apps/planos/tests/: base.py  old_planos_api.py  test_aportes_api.py  test_planos_api.py  test_resgates_api.py
apps/produtos/: apps.py  models.py  serializers.py  urls.py  views.py
apps/produtos/migrations/: 0001_initial.py  0002_rename_carenciaentreresgates_produto_carencia_entre_resgates_and_more.py
apps/produtos/tests/: test_api_produto.py
desafio_brasilprev/: asgi.py  settings.py  urls.py  wsgi.py
